--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,3 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/bsky_profanity"
-
 # Bluesky Credentials
-BLUESKY_IDENTIFIER="your-handle.bsky.social"
-BLUESKY_PASSWORD="your-app-password"
-
-# Optional: Configure the number of posts to analyze (default: 100)
-MAX_POSTS_TO_ANALYZE=100
-
-# Optional: Configure how long to cache results (in hours, default: 24)
-CACHE_DURATION_HOURS=24
+BLUESKY_IDENTIFIER="youraccount.bsky.social"
+BLUESKY_PASSWORD="YOUR_APP_PASSWORD"
