--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@atproto/api": "^0.12.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "loggit": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
