✨ Add inspo, update descriptions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "profanity.accountant",
-  "description": "🤬 A simple bot for Bluesky that counts profanities in a user's post history when mentioned in a reply.",
+  "description": "🤬 A bot for Bluesky which tells you how much profanity a user has posted..",
   "version": "0.1.0",
   "private": true,
   "type": "module",
