--- a/.github/workflows/scheduled-run.yml
+++ b/.github/workflows/scheduled-run.yml
@@ -6,6 +6,10 @@ on:
     - cron: '*/10 * * * *'
   # Allow manual triggering of the workflow
   workflow_dispatch:
+  # Run when changes are pushed to the repository
+  push:
+    branches:
+      - main
 
 jobs:
   run-application:
