--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Bluesky Credentials
 BLUESKY_IDENTIFIER="youraccount.bsky.social"
 BLUESKY_PASSWORD="YOUR_APP_PASSWORD"
+
+# Database
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
